<resources>
    <string name="app_name">Messages</string>
    <string name="app_permission_name" translatable="false">#Messages</string>
    <string name="sms_messages">SMS Messages</string>
    <string name="set_as_a_default_app">Set as Default SMS</string>
    <string name="this_app_needs_to_be_set_as_your_default_sms_app_to_send_receive_and_manage_your_text_messages_without_setting_it_as_default_you_might_miss_important_messages_or_notifications_you_can_always_change_this_later_in_your_phone_settings">This app needs to be set as your default SMS app to send, receive, and manage your text messages. Without setting it as default, you might miss important messages or notifications. You can always change this later in your phone settings.</string>
    <string name="make_this_your_primary_messaging_app">Make This Your Primary Messaging App</string>
    <string name="permission_denied_and_app_not_set_as_default_sms_app">Permission denied and app not set as default SMS app</string>
    <string name="english">English</string>
    <string name="select_preferred_language">Select Preference Language</string>
    <string name="allow_display_over_other_apps">🔔 Allow Display Over Other Apps</string>
    <string name="allow_this_permission_to_enable_essential_features_to_appear_over_other_apps_for_enhanced_functionality">Allow this permission to enable essential features to appear over other apps for enhanced functionality</string>
    <string name="request_for_overlay_permission_to_enhance_app_functionality">Request for Overlay Permission to Enhance App Functionality</string>
    <string name="please_grant_the_necessary_overlay_permission_to_ensure_the_app_functions_properly_and_provides_an_enhanced_user_experience">Please grant the necessary overlay permission to ensure the app functions properly and provides an enhanced user experience</string>
    <string name="enable">Enable</string>
    <string name="messages">Messages</string>
    <string name="search_here">Search Here…</string>
    <string name="message_text_sms">Messages</string>
    <string name="archived">Archived</string>
    <string name="backup_amp_restore"><![CDATA[Backup & Restore]]></string>
    <string name="scheduled">Scheduled</string>
    <string name="block">Block</string>
    <string name="setting">Settings</string>
    <string name="transactions">Transactions</string>
    <string name="start_chat">Start Chat</string>
    <string name="your_recent_conversations_will_appear_here_once_you_start_messaging">Your recent conversations will appear here once you start messaging…</string>
    <string name="your_conversations_will_appear_here_once_you_start_searching">Your conversations will appear here once you start searching…</string>
    <string name="new_conversation">New Conversation</string>
    <string name="type_a_name_or_number">Type a name or number</string>
    <string name="permission_denied">Permission denied</string>
    <string name="no_contacts_yet">No contacts available</string>
    <string name="a">A</string>
    <string name="this_action_can_contain_ads">This action can contain Ads</string>
    <string name="known">Known</string>
    <string name="unknown">Unknown</string>
    <string name="otp">OTP</string>
    <string name="offers">Offers</string>
    <string name="write_a_message">Write a message</string>
    <string name="apply">Apply</string>
    <string name="cancel">Cancel</string>
    <string name="apply_filters">Apply Filters</string>
    <string name="txt_default">Default</string>
    <string name="today">Today</string>
    <string name="month">Month</string>
    <string name="year">Year</string>
    <string name="date_range">Date Range</string>
    <string name="select_month">Select Month</string>
    <string name="select_year">Select Year</string>
    <string name="select_from_date">Select From Date</string>
    <string name="select_to_date">Select To Date</string>
    <string name="mark_all_as_read">Mark all as read</string>
    <string name="next">Next</string>
    <string name="automatically_send_a_message_at_the_exact_moment_you_d_like">Automatically send a message, at the exact moment you’d like</string>
    <string name="hey_are_you_free_to_meet_tomorrow">Hey! Are you free to meet tomorrow?</string>
    <string name="sounds_good_do_you_want_to_discuss_the_project_updates">Sounds good. Do you want to discuss the project updates?</string>
    <string name="sending_on_march_6th">Sending on March 6th</string>
    <string name="appearance">Appearance</string>
    <string name="app_theme">App Theme</string>
    <string name="font_size">Font Size</string>
    <string name="use_system_font">Use System Font</string>
    <string name="general">General</string>
    <string name="enable_call_screen_after_call">Enable call screen after call</string>
    <string name="notifications">Notifications</string>
    <string name="delayed_sending">Delayed Sending</string>
    <string name="_5_seconds">5 seconds</string>
    <string name="swipe_actions">Swipe actions</string>
    <string name="configure_swipe_action_for_conversation">Configure swipe action for conversation</string>
    <string name="delivery_confirmations">Delivery Confirmations</string>
    <string name="confirm_that_message_were_sent_successfully">Confirm that message were sent successfully</string>
    <string name="mobile_numbers_only">Mobile numbers only</string>
    <string name="when_composing_a_message_only_show_mobile_numbers">When composing a message,only show mobile numbers</string>
    <string name="delete_old_message_automatically">Delete old message automatically</string>
    <string name="never">Never</string>
    <string name="sending_long_message_as_mms">Sending Long Message as MMS</string>
    <string name="if_your_longer_text_message_are_failing_to_send_or_sending_in_the_wrong_order_you_can_send_them_as_mms_message_instead">If your longer text message are failing to send, or sending in the wrong order, you can send them as MMS message instead.</string>
    <string name="sync_message">Sync Message</string>
    <string name="re_sync_your_message_with_the_native_android_sms_database">Re-sync your message with the native Android SMS database</string>
    <string name="choose_language">Choose Language</string>
    <string name="rate_us">Rate Us</string>
    <string name="share_app">Share App</string>
    <string name="light_theme">Light Theme</string>
    <string name="dark_theme">Dark Theme</string>
    <string name="system_default">System Default</string>
    <string name="small">Small</string>
    <string name="normal">Normal</string>
    <string name="large">Large</string>
    <string name="medium">Medium</string>
    <string name="messages_delay">Messages Delay</string>
    <string name="no_delay">No delay</string>
    <string name="_3_seconds">3 seconds</string>
    <string name="_10_seconds">10 seconds</string>
    <string name="right_swipe">Right Swipe</string>
    <string name="change">Change</string>
    <string name="left_swipe">Left Swipe</string>
    <string name="delete">Delete</string>
    <string name="none">None</string>
    <string name="archive">Archive</string>
    <string name="call">Call</string>
    <string name="mark_read">Mark as Read</string>
    <string name="mark_unread">Mark as Unread</string>
    <string name="tap_to_customize">Tap to customize</string>
    <string name="notification_previews">Notification Previews</string>
    <string name="show_name_amp_message"><![CDATA[Show name & Message]]></string>
    <string name="wake_screen">Wake Screen</string>
    <string name="actions">Actions</string>
    <string name="button_1">Button 1</string>
    <string name="button_2">Button 2</string>
    <string name="button_3">Button 3</string>
    <string name="reply">Reply</string>
    <string name="quick_reply">Quick Reply</string>
    <string name="pop_up_for_new_message">Pop up for new message</string>
    <string name="tap_to_dismiss">Tap to Dismiss</string>
    <string name="tap_outside_of_the_pop_up_to_close_it">Tap outside of the pop-up to close it</string>
    <string name="show_name_message"><![CDATA[Show name & message]]></string>
    <string name="show_name">Show name</string>
    <string name="hide_contents">Hide contents</string>
    <string name="notification_view">Notification View</string>
    <string name="message_will_be_deleted_after_the_specified_number_of_days">Message will be deleted after the specified number of days</string>
    <string name="save">Save</string>
    <string name="number_of_days">Number of days</string>
    <string name="please_add_number_of_days">Please add number of days</string>
    <string name="blocked_number">Blocked Number</string>
    <string name="blocking">Blocking</string>
    <string name="drop_messages">Drop Messages</string>
    <string name="drop_incoming_messages_from_blocked_senders_instead_of_hiding_them">Drop incoming messages from blocked senders instead of hiding them</string>
    <string name="blocked_messages">Blocked Messages</string>
    <string name="delete_conversation">Delete Conversation</string>
    <string name="are_you_sure_you_would_you_like_to_delete_this_conversation">Are you sure you would you like to delete this conversation ?</string>
    <string name="contact">Contact</string>
    <string name="gallary">Gallary</string>
    <string name="camera">Camera</string>
    <string name="archived_conversations_will_appear_here">Archived Conversations will appear here</string>
    <string name="private_conversations_will_appear_here">Private Conversations will appear here</string>
    <string name="last_backup">Last Backup</string>
    <string name="restore">Restore</string>
    <string name="select_a_backup">Select a backup</string>
    <string name="this_is_the_start_of_your_conversation_say_something_nice">This is the start of your conversation. Say Something nice!</string>
    <string name="the_sender_does_not_support_replies">The sender does not support replies </string>
    <string name="unblock">Unblock</string>
    <string name="are_you_sure_you_want_to_unblock_this_number">Are you sure you want to unblock this number?</string>
    <string name="block_messages_from">Block Messages From</string>
    <string name="enter_a_phone_number">Enter a phone number</string>
    <string name="permission_denied_or_app_is_not_eligible">Permission denied or app is not eligible: %1$s</string>
    <string name="app_is_not_default_sms_app">App is not default SMS app</string>
    <string name="funny">Funny 🤪</string>
    <string name="love">Love 😍</string>
    <string name="wishes">Wishes 🌟</string>
    <string name="sad">Sad 😭</string>
    <string name="friend">Friend 🤗</string>
    <string name="birthday">Birthday 🎉</string>
    <string name="life">Life 🌈</string>
    <string name="motivational">Motivational 💪</string>
    <string name="savage">Savage 😎</string>
    <string name="widget">Widget</string>
    <string name="step_1">Step 1</string>
    <string name="hold_and_press">Hold and Press</string>
    <string name="step_3">Step 3</string>
    <string name="long_press_on_home_screen_and_select_widgets">Long Press on home screen and Select Widgets.</string>
    <string name="step_2">Step 2</string>
    <string name="select">Select</string>
    <string name="click_on_messages_from_widget_list_to_set_on_home_screen">Click on Messages from widget list to set on home screen.</string>
    <string name="widget_is_set">Widget is Set</string>
    <string name="now_you_can_quickly_access_messages">Now you can quickly access messages.</string>
    <string name="system_warning">System warning</string>
    <string name="rooted_devices_can_pose_security_risks_and_may_cause_unexpected_behavior">Rooted devices can pose security risks and may cause unexpected behavior</string>
    <string name="root_manager">Root manager</string>
    <string name="close">Close</string>
</resources>