<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <RelativeLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/mainBackground"
        tools:context=".activity.WidgetActivity">

        <LinearLayout
            android:id="@+id/rvTopHeaderView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivBack"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_gravity="center_vertical"
                android:src="?attr/backIcon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/_10sdp"
                android:fontFamily="@font/semi_bold_sans"
                android:text="@string/widget"
                android:textColor="?attr/titleTextColor"
                android:textSize="@dimen/_15ssp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/rvTopHeaderView"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_128sdp"
                android:layout_marginTop="@dimen/_25sdp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:src="?attr/stepOneWidget" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:fontFamily="@font/medium_sans"
                        android:text="@string/step_1"
                        android:textColor="@color/app_theme_color"
                        android:textSize="@dimen/_14ssp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="@dimen/_7sdp"
                        android:fontFamily="@font/regular_sans"
                        android:text="@string/hold_and_press"
                        android:textColor="?attr/titleTextColor"
                        android:textSize="@dimen/_13ssp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="@dimen/_7sdp"
                        android:fontFamily="@font/regular_sans"
                        android:text="@string/long_press_on_home_screen_and_select_widgets"
                        android:textAlignment="center"
                        android:textColor="?attr/subTextColor"
                        android:textSize="@dimen/_10ssp" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_128sdp"
                android:layout_marginTop="@dimen/_25sdp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:src="?attr/stepTwoWidget" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:fontFamily="@font/medium_sans"
                        android:text="@string/step_2"
                        android:textColor="@color/app_theme_color"
                        android:textSize="@dimen/_14ssp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="@dimen/_7sdp"
                        android:fontFamily="@font/regular_sans"
                        android:text="@string/select"
                        android:textColor="?attr/titleTextColor"
                        android:textSize="@dimen/_13ssp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="@dimen/_7sdp"
                        android:fontFamily="@font/regular_sans"
                        android:text="@string/click_on_messages_from_widget_list_to_set_on_home_screen"
                        android:textAlignment="center"
                        android:textColor="?attr/subTextColor"
                        android:textSize="@dimen/_10ssp" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_128sdp"
                android:layout_marginTop="@dimen/_25sdp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:src="?attr/stepThreeWidget" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:fontFamily="@font/medium_sans"
                        android:text="@string/step_3"
                        android:textColor="@color/app_theme_color"
                        android:textSize="@dimen/_14ssp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="@dimen/_7sdp"
                        android:fontFamily="@font/regular_sans"
                        android:text="@string/widget_is_set"
                        android:textColor="?attr/titleTextColor"
                        android:textSize="@dimen/_13ssp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="@dimen/_7sdp"
                        android:fontFamily="@font/regular_sans"
                        android:text="@string/now_you_can_quickly_access_messages"
                        android:textAlignment="center"
                        android:textColor="?attr/titleTextColor"
                        android:textSize="@dimen/_10ssp" />

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</layout>