<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/mainBackground"
        android:orientation="vertical"
        tools:context=".activity.RootDeviceFoundActivity">

        <LinearLayout
            android:id="@+id/llTopHeaderView"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_50sdp"
            android:layout_gravity="center_horizontal"
            android:layout_marginHorizontal="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/img_app_icon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/_8sdp"
                android:fontFamily="@font/semi_bold_sans"
                android:text="@string/app_name"
                android:textColor="?attr/titleTextColor"
                android:textSize="@dimen/_13ssp" />

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_280sdp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:src="?attr/system_warning_image" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/semi_bold_sans"
            android:text="@string/system_warning"
            android:textColor="@color/app_theme_color"
            android:textSize="@dimen/_16ssp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_3sdp"
            android:fontFamily="@font/regular_sans"
            android:text="@string/rooted_devices_can_pose_security_risks_and_may_cause_unexpected_behavior"
            android:textAlignment="center"
            android:textColor="?attr/subTextColor"
            android:textSize="@dimen/_11ssp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnRootManager"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_38sdp"
            android:layout_marginHorizontal="@dimen/_45sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:background="@drawable/bg_theme_rounded_button_10dp"
            android:fontFamily="@font/semi_bold_sans"
            android:text="@string/root_manager"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/_13ssp" />

        <TextView
            android:id="@+id/txtClose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:fontFamily="@font/semi_bold_sans"
            android:text="@string/close"
            android:textAlignment="center"
            android:textColor="?attr/subTextColor"
            android:textSize="@dimen/_12ssp" />

    </LinearLayout>
</layout>